<resources>
    <string name="app_name">Room4You</string>
    <string name="placeholder">Hello There</string>
    <string name="title_activity_startup">Permission Check</string>
    <string name="title_activity_maps">Map</string>
    <string name="building">Building</string>
    <string name="floor">Floor</string>
    <string name="room">Room</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="booking_dialog_pt1">Would you like to see</string>
    <string name="booking_dialog_pt2">\'s bookings?</string>
    <string name="go_to_user_text">Find me</string>
    <string name="find_building">Find building</string>
    <string name="book_this_room">Book This Room</string>

    <string name="EXTRA_ROOM">com.s306631.room4you.activities.EXTRA_ROOM</string>
    <string name="select_time">Select Time</string>
    <string name="registered_bookings">Registered Bookings</string>
    <string name="register_booking">Register Booking</string>
    <string name="your_name">Your Name</string>
    <string name="floors">Floors</string>
    <string name="coordinates">Coordinates</string>
    <string name="add_building">Add Building</string>
    <string name="building_name">Building Name</string>
    <string name="number_of_floors">Number of Floors</string>
    <string name="tap_to_choose_coordinates">Tap to choose coordinates</string>
    <string name="add">Add</string>
    <string name="delete_building">Delete building</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="hide_map">Hide Map</string>
    <string name="no_coordinates_selected">No Coordinates Selected</string>
    <string name="add_room">Add Room</string>
    <string name="room_name">Room Name</string>
    <string name="floormnumber">Floormnumber</string>
    <string name="delete_room">Delete Room</string>
    <string name="delete_booking">Delete Booking</string>
    <string name="select_date">Select Date</string>
    <string name="date_icon">Date Icon</string>

    <string-array name="possible_booking_times">
        <item>08:00 - 09:00</item>
        <item>09:00 - 10:00</item>
        <item>10:00 - 11:00</item>
        <item>11:00 - 12:00</item>
        <item>12:00 - 13:00</item>
        <item>13:00 - 14:00</item>
        <item>14:00 - 15:00</item>
        <item>15:00 - 16:00</item>
        <item>16:00 - 17:00</item>
        <item>17:00 - 18:00</item>
        <item>18:00 - 19:00</item>
    </string-array>

</resources>
