<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_booking"
    android:layout_width="250dp"
    android:layout_height="150dp">

    <TextView
        android:id="@+id/text_view_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/placeholder"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/text_view_dialog_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/yes"
        android:textColor="#43A047"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_dialog_dissmiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:layout_toStartOf="@id/text_view_dialog_confirm"
        android:text="@string/no"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>