<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/layout_add_building"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/text_view_add_building_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/add_building"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_view_building_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_building_black"
            android:layout_below="@id/text_view_add_building_header"
            android:layout_marginTop="30dp" />

        <EditText
            android:id="@+id/edit_text_building_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_add_building_header"
            android:layout_toEndOf="@id/image_view_building_name"
            android:hint="@string/building_name"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:inputType="text" />

        <ImageView
            android:id="@+id/image_view_floors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_stairs_black"
            android:layout_below="@id/image_view_building_name"
            android:layout_marginTop="35dp" />

        <EditText
            android:id="@+id/edit_text_floors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_building_name"
            android:layout_toEndOf="@id/image_view_floors"
            android:hint="@string/number_of_floors"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:inputType="number" />

        <ImageView
            android:id="@+id/image_view_coordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_gps_black"
            android:layout_below="@id/image_view_floors"
            android:layout_marginTop="35dp" />

        <TextView
            android:id="@+id/text_view_coordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_floors"
            android:layout_toEndOf="@id/image_view_floors"
            android:hint="@string/tap_to_choose_coordinates"
            android:layout_marginTop="29dp"
            android:layout_marginStart="10dp" />

        <Button
            android:id="@+id/button_add_building"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_view_coordinates"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            android:background="@drawable/green_button"
            android:textSize="15sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view_line"
            android:layout_width="400dp"
            android:layout_height="1dp"
            android:layout_below="@id/button_add_building"
            android:layout_marginTop="20dp"
            android:background="#80000000" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_delete_building"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_add_building"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/text_view_delete_building_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/delete_building"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_view_building_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_building_black"
            android:layout_below="@id/text_view_delete_building_header"
            android:layout_marginTop="30dp" />

        <Spinner
            android:id="@+id/spinner_deleteable_buildings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_delete_building_header"
            android:layout_toEndOf="@id/image_view_building_delete"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/button_delete_building"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_deleteable_buildings"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:text="@string/delete"
            android:textColor="#FFFFFF"
            android:background="@drawable/red_button"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_confirm_coordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/confirm"
        android:textColor="#FFFFFF"
        android:background="@drawable/green_button"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_hide_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/hide_map"
        android:textColor="#FFFFFF"
        android:background="@drawable/red_button"
        android:textSize="15sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/layout_building_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

</RelativeLayout>