<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MapActivity" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/map_ui_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:elevation="10dp"
        android:background="#fff" >

        <TextView
            android:id="@+id/text_view_building"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="5dp"
            android:text="@string/building"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_buildings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="@+id/text_view_building"
            app:layout_constraintStart_toStartOf="@+id/text_view_building"
            app:layout_constraintTop_toBottomOf="@+id/text_view_building" />

        <TextView
            android:id="@+id/text_view_floors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/floor"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_view_building"
            app:layout_constraintStart_toEndOf="@+id/text_view_building" />

        <Spinner
            android:id="@+id/spinner_floors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="@+id/text_view_floors"
            app:layout_constraintStart_toStartOf="@+id/text_view_floors"
            app:layout_constraintTop_toBottomOf="@+id/text_view_floors" />

        <TextView
            android:id="@+id/text_view_rooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:text="@string/room"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_view_building"
            app:layout_constraintStart_toEndOf="@+id/text_view_floors" />

        <Spinner
            android:id="@+id/spinner_rooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="@+id/text_view_rooms"
            app:layout_constraintStart_toStartOf="@+id/text_view_rooms"
            app:layout_constraintTop_toBottomOf="@+id/text_view_rooms" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</RelativeLayout>